--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -40,3 +40,9 @@
 }
 
 @import './reset.css';
+
+@utility font-rock {
+  font-family: 'Rock 3D', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
