--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -1,3 +1,5 @@
+@import 'reset.css';
+
 @import 'tailwindcss';
 
 @plugin "daisyui/theme" {
@@ -38,8 +40,6 @@
 @plugin "daisyui" {
   themes: 'pastel';
 }
-
-@import './reset.css';
 
 @font-face {
   font-family: Notebook;
