--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -62,5 +62,7 @@
 body {
   background-image: url('/images/background.png');
   background-color: #e5e6f3;
-  background-repeat: repeat;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
 }
